--- a/pom.xml
+++ b/pom.xml
@@ -120,10 +120,10 @@
 		</dependency>
 
 		<!-- Example for login: ssh -p 2000 admin@<HOSTNAME> -->
-		<dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-remote-shell</artifactId>
-		</dependency>
+		<!-- <dependency> -->
+		<!-- <groupId>org.springframework.boot</groupId> -->
+		<!-- <artifactId>spring-boot-starter-remote-shell</artifactId> -->
+		<!-- </dependency> -->
 		<dependency>
 			<groupId>org.thymeleaf.extras</groupId>
 			<artifactId>thymeleaf-extras-springsecurity4</artifactId>
@@ -205,12 +205,7 @@
 			<artifactId>hamcrest-junit</artifactId>
 			<version>2.0.0.0</version>
 			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.neo4j</groupId>
-			<artifactId>neo4j-cypher-compiler-2.1</artifactId>
-			<version>2.1.8</version>
-		</dependency>
+		</dependency>		
 	</dependencies>
 
 	<build>
