--- a/pom.xml
+++ b/pom.xml
@@ -165,6 +165,16 @@
 			<artifactId>HikariCP</artifactId>
 		</dependency>
 
+		<!-- for form validation -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.hibernate</groupId> -->
+		<!-- <artifactId>hibernate-validator</artifactId> -->
+		<!-- </dependency> -->
+		<!-- <dependency> -->
+		<!-- <groupId>org.apache.tomcat.embed</groupId> -->
+		<!-- <artifactId>tomcat-embed-el</artifactId> -->
+		<!-- </dependency> -->
+
 		<!-- Test dependencies -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
@@ -205,7 +215,7 @@
 			<artifactId>hamcrest-junit</artifactId>
 			<version>2.0.0.0</version>
 			<scope>test</scope>
-		</dependency>		
+		</dependency>
 	</dependencies>
 
 	<build>
