--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -17,3 +17,6 @@ spring.h2.console.enabled=true
 shell.ssh.enabled=false
 
 flyway.enabled=true
+
+# Session timeout in seconds. For testing
+# server.session.timeout=5
