--- a/src/docker/docker-compose/mariadb/docker-compose.yml
+++ b/src/docker/docker-compose/mariadb/docker-compose.yml
@@ -11,13 +11,13 @@ mariadb:
    - MYSQL_PASSWORD=fred
 
 fredbet:
-  image: fred4jupiter/fredbet
+  image: hamsterhase/fredbet
   links:
     - mariadb:mariadb
   ports:
     - "8080:8080"
   environment:
-   - spring.profiles.active=test
+   - spring.profiles.active=docker
    - JDBC_URL=jdbc:mariadb://mariadb:3306/fredbetdb
    - JDBC_USERNAME=fred
    - JDBC_PASSWORD=fred
