--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,9 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 # by default the dev profile is active
 spring.profiles.active=dev
 
+# Adds or removes the navigation entry for demo data creation in administraion menu
+# You can enable/disable this param by JVM dynamic parameter: -Denable.demodata.creation=false
+enable.demodata.creation=true
+
 # Session timeout in seconds. For testing
 # server.session.timeout=1
