--- a/pom.xml
+++ b/pom.xml
@@ -231,14 +231,15 @@
 			</resource>
 		</resources>
 		<plugins>
-			<plugin>
-				<groupId>org.springframework.boot</groupId>
-				<artifactId>spring-boot-maven-plugin</artifactId>
-				<configuration>
-					<!-- configured for using devtools within the spring boot plugin -->
-					<fork>true</fork>
-				</configuration>
-			</plugin>
+<!-- 			<plugin> -->
+<!-- 				<groupId>org.springframework.boot</groupId> -->
+<!-- 				<artifactId>spring-boot-maven-plugin</artifactId> -->
+<!-- 				<configuration> -->
+<!-- 					configured for using devtools within the spring boot plugin -->
+<!-- 					<fork>true</fork> -->
+<!-- 					<classifier>exec</classifier> -->
+<!-- 				</configuration> -->
+<!-- 			</plugin> -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>buildnumber-maven-plugin</artifactId>
@@ -255,7 +256,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
-				<version>2.19</version>
 				<configuration>
 					<includes>
 						<include>**/*UT.java</include>
@@ -265,7 +265,6 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-failsafe-plugin</artifactId>
-				<version>2.19</version>
 				<configuration>
 					<includes>
 						<include>**/*IT.java</include>
@@ -287,7 +286,7 @@
 				<configuration>
 					<serverId>docker-hub</serverId>
 					<imageName>hamsterhase/fredbet:latest</imageName>
-					<dockerDirectory>${project.build.directory}/</dockerDirectory>					
+					<dockerDirectory>${project.build.directory}/</dockerDirectory>
 					<resources>
 						<resource>
 							<targetPath>/</targetPath>
