--- a/pom.xml
+++ b/pom.xml
@@ -230,7 +230,19 @@
 				</excludes>
 			</resource>
 		</resources>
+
 		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+				<executions>
+					<execution>
+						<goals>
+							<goal>repackage</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>buildnumber-maven-plugin</artifactId>
@@ -273,11 +285,11 @@
 			<plugin>
 				<groupId>com.spotify</groupId>
 				<artifactId>docker-maven-plugin</artifactId>
-				<version>0.4.10</version>
+				<version>0.4.13</version>
 				<configuration>
-					<serverId>docker-hub</serverId>
+<!-- 					<serverId>docker-hub</serverId> -->
 					<imageName>hamsterhase/fredbet:latest</imageName>
-					<dockerDirectory>${project.build.directory}/</dockerDirectory>
+					<dockerDirectory>${project.build.directory}/docker</dockerDirectory>
 					<resources>
 						<resource>
 							<targetPath>/</targetPath>
