--- a/src/main/resources/application-localdb.properties
+++ b/src/main/resources/application-localdb.properties
@@ -1,5 +1,7 @@
 spring.thymeleaf.cache=false
 
+flyway.enabled=false
+
 fredbet.database-url=jdbc:mariadb://localhost:3306/fredbetdb
 fredbet.database-username=fredbet
 fredbet.database-password=fredbet
