--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,6 +6,8 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 flyway.enabled=true
 
+spring.h2.console.enabled=false
+
 # possible values: none, validate, update, create, create-drop
 spring.jpa.hibernate.ddl-auto=validate
 
