--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -5,6 +5,8 @@ spring.thymeleaf.cache=false
 spring.h2.console.enabled=true
 
 fredbet.create-demo-data=true
+fredbet.enable-demo-data-creation-navigation-entry=true
+
 fredbet.database-url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
 fredbet.database-username=sa
 fredbet.database-password=
