update to java 21

--- a/pom.xml
+++ b/pom.xml
@@ -267,6 +267,7 @@
                             <additionalProperties>
                                 <encoding.source>UTF-8</encoding.source>
                                 <encoding.reporting>UTF-8</encoding.reporting>
+                                <java.version>${java.version}</java.version>
                             </additionalProperties>
                         </configuration>
                     </execution>
