--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -17,9 +17,10 @@ logging:
   pattern:
     console: "%black(%d{ISO8601}) %highlight(%-5level) %yellow(%C{1.}): %msg%n%throwable"
   level:
-    "org.springframework.security.web.csrf": WARN
-    "org.springframework.security.web.access": WARN
-    "de.fred4jupiter.fredbet": DEBUG
+    root: "WARN"
+    "org.springframework.security.web.csrf": "WARN"
+    "org.springframework.security.web.access": "WARN"
+    "de.fred4jupiter.fredbet": "DEBUG"
 
 fredbet:
   create-demo-data: false
