--- a/src/main/resources/application-devpostgres.yml
+++ b/src/main/resources/application-devpostgres.yml
@@ -12,7 +12,12 @@ spring:
 
 logging:
   pattern:
-    console: "%highlight(%d %-5level [%c] - %msg%n)"
+    console: "%black(%d{ISO8601}) %highlight(%-5level) %yellow(%C{1.}): %msg%n%throwable"
+  level:
+    root: "WARN"
+    "org.springframework.security.web.csrf": "WARN"
+    "org.springframework.security.web.access": "WARN"
+    "de.fred4jupiter.fredbet": "DEBUG"
 
 fredbet:
   create-demo-data: false
