--- a/pom.xml
+++ b/pom.xml
@@ -236,7 +236,7 @@
         <dependency>
             <groupId>com.tngtech.archunit</groupId>
             <artifactId>archunit-junit5</artifactId>
-            <version>1.1.0</version>
+            <version>1.3.0</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -284,6 +284,7 @@
                     <includes>
                         <include>**/*UT.java</include>
                         <include>**/*IT.java</include>
+                        <include>**/*Test.java</include>
                     </includes>
                     <excludes>
                         <!-- Manual tests will be excluded -->
