--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,11 @@
             <version>5.3.3</version>
         </dependency>
         <dependency>
+            <groupId>org.webjars.npm</groupId>
+            <artifactId>bootstrap-icons</artifactId>
+            <version>1.10.3</version>
+        </dependency>
+        <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>bootswatch</artifactId>
             <version>3.3.7</version>
