--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -27,3 +27,8 @@ jobs:
             ${{ runner.os }}-maven-
       - name: Build with Maven
         run: mvn -B verify
+      - name: Publish Test Report
+        uses: mikepenz/action-junit-report@v5
+        if: success() || failure() # always run even if the previous step fails
+        with:
+          report_paths: 'target/surefire-reports/TEST-*.xml'
