--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,7 +28,10 @@ jobs:
       - name: Build with Maven
         run: mvn -B verify
       - name: Publish Test Report
-        uses: mikepenz/action-junit-report@v5
-        if: success() || failure() # always run even if the previous step fails
-        with:
-          report_paths: 'target/surefire-reports/TEST-*.xml'
+        if: success() || failure()
+        uses: scacap/action-surefire-report@v1
+#      - name: Publish Test Report
+#        uses: mikepenz/action-junit-report@v5
+#        if: success() || failure() # always run even if the previous step fails
+#        with:
+#          report_paths: 'target/surefire-reports/TEST-*.xml'
