--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -28,8 +28,13 @@ jobs:
       - name: Build with Maven
         run: mvn -B verify
       - name: Publish Test Report
-        if: success() || failure()
-        uses: scacap/action-surefire-report@v1
+        uses: dorny/test-reporter@v1
+        if: always()
+        with:
+          name: Maven Tests
+          path: target/surefire-reports/*.xml
+          reporter: java-junit
+          fail-on-error: true
 #      - name: Publish Test Report
 #        uses: mikepenz/action-junit-report@v5
 #        if: success() || failure() # always run even if the previous step fails
