--- a/Dockerfile-single
+++ b/Dockerfile-single
@@ -7,5 +7,6 @@ ENV JAVA_OPTS="-Duser.timezone=Europe/Berlin"
 
 EXPOSE 8080
 
-COPY --from=builder /build/target/fredbet.jar fredbet.jar
+COPY target/fredbet.jar fredbet.jar
+
 CMD exec java $JAVA_OPTS -jar fredbet.jar
