--- a/pom.xml
+++ b/pom.xml
@@ -139,11 +139,11 @@
             <artifactId>font-awesome</artifactId>
             <version>5.12.0</version>
         </dependency>
-<!--        <dependency>-->
-<!--            <groupId>org.webjars</groupId>-->
-<!--            <artifactId>popper.js</artifactId>-->
-<!--            <version>2.11.7</version>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.webjars</groupId>-->
+        <!--            <artifactId>popper.js</artifactId>-->
+        <!--            <version>2.11.7</version>-->
+        <!--        </dependency>-->
         <dependency>
             <groupId>org.webjars</groupId>
             <artifactId>webjars-locator-core</artifactId>
@@ -300,6 +300,7 @@
                         <!-- Manual tests will be excluded -->
                         <exclude>**/*MT.java</exclude>
                     </excludes>
+                    <argLine>-javaagent:${project.build.directory}/agent/mockito-core.jar</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -349,33 +350,51 @@
             </plugin>
             <!-- https://github.com/CycloneDX/cyclonedx-maven-plugin  -->
             <!-- result see target/classes/META-INF/sbom/application.cdx.json, can then be analyzed in Dependency Track -->
-<!--            <plugin>-->
-<!--                <groupId>org.cyclonedx</groupId>-->
-<!--                <artifactId>cyclonedx-maven-plugin</artifactId>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <phase>package</phase>-->
-<!--                        <goals>-->
-<!--                            <goal>makeAggregateBom</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
+            <!--            <plugin>-->
+            <!--                <groupId>org.cyclonedx</groupId>-->
+            <!--                <artifactId>cyclonedx-maven-plugin</artifactId>-->
+            <!--                <executions>-->
+            <!--                    <execution>-->
+            <!--                        <phase>package</phase>-->
+            <!--                        <goals>-->
+            <!--                            <goal>makeAggregateBom</goal>-->
+            <!--                        </goals>-->
+            <!--                    </execution>-->
+            <!--                </executions>-->
+            <!--            </plugin>-->
 
             <!-- steps to perform: mvn verify, mvn jqassistant:server, open URL at https://localhost:7474 -->
-<!--            <plugin>-->
-<!--                <groupId>com.buschmais.jqassistant</groupId>-->
-<!--                <artifactId>jqassistant-maven-plugin</artifactId>-->
-<!--                <version>2.5.0</version>-->
-<!--                <executions>-->
-<!--                    <execution>-->
-<!--                        <goals>-->
-<!--                            <goal>scan</goal>-->
-<!--                            <goal>analyze</goal>-->
-<!--                        </goals>-->
-<!--                    </execution>-->
-<!--                </executions>-->
-<!--            </plugin>-->
+            <!--            <plugin>-->
+            <!--                <groupId>com.buschmais.jqassistant</groupId>-->
+            <!--                <artifactId>jqassistant-maven-plugin</artifactId>-->
+            <!--                <version>2.5.0</version>-->
+            <!--                <executions>-->
+            <!--                    <execution>-->
+            <!--                        <goals>-->
+            <!--                            <goal>scan</goal>-->
+            <!--                            <goal>analyze</goal>-->
+            <!--                        </goals>-->
+            <!--                    </execution>-->
+            <!--                </executions>-->
+            <!--            </plugin>-->
+            <plugin>
+                <artifactId>maven-dependency-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <id>copy-mockito-agent</id>
+                        <phase>process-test-classes</phase>
+                        <goals>
+                            <goal>copy-dependencies</goal>
+                        </goals>
+                        <configuration>
+                            <includeGroupIds>org.mockito</includeGroupIds>
+                            <includeArtifactIds>mockito-core</includeArtifactIds>
+                            <stripVersion>true</stripVersion>
+                            <outputDirectory>${project.build.directory}/agent</outputDirectory>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
         </plugins>
     </build>
 
