--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -53,7 +53,7 @@ management:
       base-path: /actuator
   endpoint:
     health:
-      enabled: true
+      access: read_only
 
 # -------- fredbet properties ------------------------------------------------------------------------------
 
